--- a/config.yml
+++ b/config.yml
@@ -14,10 +14,10 @@ finetune:
   checkpoint: Rendezvous
 
 dataset:
-  batch_size: 32
+  batch_size: 64
   num_workers: 4
   kfold: 1
-  data_dir: '/workspace/CHEN_ZK/Rendezvous/rendezvous/pytorch/CholecT45/CholecT45 - 副本/'
+  data_dir: '/root/.cache/huggingface/forget/datasets/CholecT45/'
   dataset_variant: 'cholect45-crossval'
   pin_memory: True
   persistent_workers: True
