--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ trainer:
   decay_rate: 0.99
   weight_decay: 0.05
   weight_decay_end: 0.04
-  val_training: True
+  val_training: False
   resume: True
 
 finetune:
